syntax = "proto3";

package user.v1;

option go_package = "github.com/granula/shared/gen/user/v1;userv1";

import "common/v1/common.proto";

// UserService - сервис управления пользователями
service UserService {
  // Создать профиль (вызывается при регистрации)
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);
  
  // Получить профиль текущего пользователя
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  
  // Обновить профиль
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  
  // Загрузить аватар
  rpc UploadAvatar(UploadAvatarRequest) returns (UploadAvatarResponse);
  
  // Изменить пароль
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  
  // Удалить пользователя
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// CreateProfileRequest - запрос создания профиля
message CreateProfileRequest {
  string user_id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
}

// CreateProfileResponse - ответ создания профиля
message CreateProfileResponse {
  User user = 1;
}

// GetProfileRequest - запрос профиля
message GetProfileRequest {
  string user_id = 1;
}

// GetProfileResponse - ответ профиля
message GetProfileResponse {
  User user = 1;
}

// UpdateProfileRequest - запрос обновления профиля
message UpdateProfileRequest {
  string user_id = 1;
  string name = 2;
  string avatar_url = 3;
}

// UpdateProfileResponse - ответ обновления профиля
message UpdateProfileResponse {
  User user = 1;
}

// UploadAvatarRequest - запрос загрузки аватара
message UploadAvatarRequest {
  string user_id = 1;
  bytes image_data = 2;
  string content_type = 3;
}

// UploadAvatarResponse - ответ загрузки аватара
message UploadAvatarResponse {
  string avatar_url = 1;
}

// ChangePasswordRequest - запрос изменения пароля
message ChangePasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

// ChangePasswordResponse - ответ изменения пароля
message ChangePasswordResponse {
  bool success = 1;
}

// DeleteUserRequest - запрос удаления пользователя
message DeleteUserRequest {
  string user_id = 1;
}

// DeleteUserResponse - ответ удаления пользователя
message DeleteUserResponse {
  bool success = 1;
}

// User - модель пользователя
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string avatar_url = 4;
  string role = 5;
  bool email_verified = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

